--- a/index.cancelamentos.html
+++ b/index.cancelamentos.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <title>Cancelamentos - Grupo DV</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -79,6 +78,11 @@
     .item-cancelamento p {
       margin: 4px 0;
     }
+    .subtotal {
+      font-weight: bold;
+      margin-top: 10px;
+      font-size: 1.05em;
+    }
     .btn-whatsapp {
       background-color: #25D366;
       color: white;
@@ -99,23 +103,6 @@
       font-size: 1.1em;
       margin-bottom: 20px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.05);
-    }
-    #graficoCancelamentos {
-      background: #fff;
-      border-radius: 12px;
-      padding: 20px;
-      margin-bottom: 30px;
-      width: 100% !important;
-      max-width: 100%;
-      height: 300px !important;
-      box-sizing: border-box;
-      display: none;
-    }
-    .dados-analisados {
-      text-align: center;
-      color: #555;
-      font-size: 0.95em;
-      margin-top: 20px;
     }
     @media (max-width: 600px) {
       header {
@@ -159,28 +146,26 @@
 </head>
 <body>
 
-<!-- Cabeçalho -->
 <header>
-  <img src="logo.png" alt="Logo Grupo DV">
-  <h1 id="tituloPainel">Cancelamentos</h1>
+  <img src="https://static.wixstatic.com/media/d830b0_8cec50a98bbf4775814dbfa5386585e8~mv2.png" alt="Logo CB Systems">
+  <h1>Cancelamentos</h1>
 </header>
 
 <div class="container">
   <div class="filters">
+    <input type="date" id="dataInicio" />
+    <input type="date" id="dataFim" />
     <select id="filtroEmpresa"></select>
-    <input type="date" id="dataInicio">
-    <input type="date" id="dataFim">
-    <input type="text" id="filtroBusca" placeholder="Buscar por item...">
-    <button class="btn-whatsapp" onclick="enviarWhatsapp()">Enviar WhatsApp</button>
+    <input type="text" id="filtroBusca" placeholder="Buscar item..." />
   </div>
-
-  <div class="total-cancelado" id="totalCancelado">R$ 0,00</div>
-  <canvas id="graficoCancelamentos"></canvas>
+  <button class="btn-whatsapp" onclick="enviarWhatsapp()">📤 Enviar via WhatsApp</button>
+  <div class="total-cancelado">
+    📊 Total Cancelado: <span id="totalCancelado">R$ 0,00</span>
+  </div>
   <div id="listaCancelamentos"></div>
-  <div class="dados-analisados" id="resumoDados"></div>
 </div>
 
-<!-- Botão Assistente -->
+<!-- Botão Assistente com Efeito Siri -->
 <button id="btnAbrirAssistente" onclick="document.getElementById('chatAssistente').style.display='flex'">💬</button>
 <div id="chatAssistente" style="display:none; position: fixed; bottom: 90px; right: 20px; width: 300px; max-height: 400px; background: white; box-shadow: 0 0 15px rgba(0,0,0,0.2); border-radius: 10px; overflow: hidden; z-index: 9998; font-family: Arial, sans-serif;">
   <div style="background: #343a40; color: white; padding: 10px; text-align: center;">Assistente</div>
@@ -190,219 +175,68 @@
     <button onclick="responderPergunta()" style="background:#25D366;color:white;border:none;padding: 0 15px;">➤</button>
   </div>
 </div>
+
 <script>
-  const URL_SCRIPT = 'https://script.google.com/macros/s/AKfycby6kNirWdyaFymip0MFrqTNoItMgqkXJrzwf41Qxe2P1j8BoBILtnyws8o4f5sUdg-T3w/exec';
-  let cancelamentos = [];
-  let chartCancelamentos = null;
+  function responderPergunta() {
+    const input = document.getElementById("inputMensagem");
+    const texto = input.value.trim();
+    if (!texto) return;
+    const chat = document.getElementById("chatMensagens");
 
-  function preencherDataPadrao() {
-    const hoje = new Date();
-    const ontem = new Date(hoje);
-    ontem.setDate(hoje.getDate() - 1);
-    const formato = d => d.toISOString().split('T')[0];
-    document.getElementById("dataInicio").value = formato(ontem);
-    document.getElementById("dataFim").value = formato(ontem);
-  }
+    const divUser = document.createElement("div");
+    divUser.textContent = texto;
+    divUser.style.background = "#dcf8c6";
+    divUser.style.margin = "5px 0";
+    divUser.style.padding = "8px";
+    divUser.style.borderRadius = "8px";
+    divUser.style.alignSelf = "flex-end";
+    chat.appendChild(divUser);
 
-  async function carregarDados() {
-    const res = await fetch(URL_SCRIPT);
-    cancelamentos = await res.json();
-    preencherFiltros();
-    aplicarFiltros();
-  }
+    const divResp = document.createElement("div");
+    divResp.style.background = "#f1f0f0";
+    divResp.style.margin = "5px 0";
+    divResp.style.padding = "8px";
+    divResp.style.borderRadius = "8px";
+    divResp.textContent = "🔍 Consultando...";
+    chat.appendChild(divResp);
 
-  function formatarMoeda(valor) {
-    return valor.toLocaleString('pt-BR', { style: 'currency', currency: 'BRL' });
-  }
+    setTimeout(() => {
+      let resposta = "❓ Ainda estou aprendendo! Tente perguntar sobre cancelamentos do mês passado, hoje, rodízio, ou empresa com mais cancelamentos.";
+      const hoje = new Date();
+      const ontem = new Date(hoje);
+      ontem.setDate(hoje.getDate() - 1);
+      const mesPassado = new Date();
+      mesPassado.setMonth(hoje.getMonth() - 1);
+      const mes = String(mesPassado.getMonth() + 1).padStart(2, '0');
+      const ano = mesPassado.getFullYear();
 
-  function formatarDataBR(dataISO) {
-    const [ano, mes, dia] = dataISO.split("-");
-    return `${dia}/${mes}/${ano}`;
-  }
-
-  function preencherFiltros() {
-    const empresas = [...new Set(cancelamentos.map(c => c.empresa))].sort();
-    const selectEmpresa = document.getElementById('filtroEmpresa');
-    selectEmpresa.innerHTML = `<option value="">Todas as Empresas</option>` +
-      empresas.map(emp => `<option value="${emp}">${emp}</option>`).join('');
-  }
-
-  function aplicarFiltros() {
-    const empresaFiltro = document.getElementById('filtroEmpresa').value;
-    const busca = document.getElementById('filtroBusca').value.toLowerCase();
-    const dataInicio = document.getElementById('dataInicio').value;
-    const dataFim = document.getElementById('dataFim').value;
-
-    const tituloPainel = document.getElementById("tituloPainel");
-    if (dataInicio && dataFim) {
-      tituloPainel.innerText = `Cancelamentos (${formatarDataBR(dataInicio)} a ${formatarDataBR(dataFim)})`;
-    } else {
-      tituloPainel.innerText = "Cancelamentos";
-    }
-
-    const lista = document.getElementById("listaCancelamentos");
-    lista.innerHTML = "";
-    document.getElementById("rankingContainer")?.remove();
-
-    let totalGeral = 0;
-    let registrosContados = 0;
-    const grupos = {};
-
-    cancelamentos.forEach(c => {
-      if (
-        (empresaFiltro && c.empresa !== empresaFiltro) ||
-        (busca && !c.item.toLowerCase().includes(busca)) ||
-        (dataInicio && c.data < dataInicio) ||
-        (dataFim && c.data > dataFim)
-      ) return;
-
-      registrosContados++;
-      if (!grupos[c.empresa]) grupos[c.empresa] = [];
-      grupos[c.empresa].push(c);
-    });
-
-    Object.keys(grupos).forEach(empresa => {
-      const grupo = grupos[empresa];
-      let subtotal = 0;
-
-      const divGrupo = document.createElement("div");
-      divGrupo.className = "grupo-empresa";
-
-      const primeiraData = grupo[0]?.data || "";
-      grupo.forEach(c => subtotal += c.valor);
-      totalGeral += subtotal;
-
-      const titulo = document.createElement("h2");
-      titulo.innerHTML = `📅 ${formatarDataBR(primeiraData)} • 🏢 ${empresa} — <strong>Subtotal: ${formatarMoeda(subtotal)}</strong>`;
-      divGrupo.appendChild(titulo);
-
-      grupo.forEach(c => {
-        const itemDiv = document.createElement("div");
-        itemDiv.className = "item-cancelamento";
-
-        const [nomeItem, valorInfo] = c.item.split(" – ");
-        itemDiv.innerHTML = `
-          <p>${nomeItem}</p>
-          <p>💸 ${valorInfo || formatarMoeda(c.valor)}</p>
-        `;
-        divGrupo.appendChild(itemDiv);
-      });
-
-      lista.appendChild(divGrupo);
-
-      if (empresaFiltro === empresa) {
-        exibirRanking(grupo);
+      if (texto.includes("mês passado")) {
+        const total = cancelamentos.filter(c => c.data.startsWith(`${ano}-${mes}`)).reduce((s, c) => s + c.valor, 0);
+        resposta = `💰 Total cancelado em ${mes}/${ano}: ${formatarMoeda(total)}`;
+      } else if (texto.includes("rodízio") || texto.includes("rodizio")) {
+        const rodizios = cancelamentos.filter(c => c.item.toLowerCase().includes("rodízio") || c.item.toLowerCase().includes("rodizio"));
+        const total = rodizios.reduce((s, c) => s + c.valor, 0);
+        resposta = `🍽️ Cancelamentos de rodízio: ${rodizios.length} itens, total ${formatarMoeda(total)}`;
+      } else if (texto.includes("empresa") && texto.includes("mais")) {
+        const totais = {};
+        cancelamentos.forEach(c => { totais[c.empresa] = (totais[c.empresa] || 0) + c.valor; });
+        const maior = Object.entries(totais).sort((a,b)=>b[1]-a[1])[0];
+        resposta = `🏢 Empresa com mais cancelamentos: ${maior[0]} (${formatarMoeda(maior[1])})`;
+      } else if (texto.includes("hoje")) {
+        const hojeStr = hoje.toISOString().split('T')[0];
+        const total = cancelamentos.filter(c => c.data === hojeStr).reduce((s, c) => s + c.valor, 0);
+        resposta = `📅 Cancelamentos de hoje: ${formatarMoeda(total)}`;
+      } else if (texto.includes("ontem")) {
+        const ontemStr = ontem.toISOString().split('T')[0];
+        const total = cancelamentos.filter(c => c.data === ontemStr).reduce((s, c) => s + c.valor, 0);
+        resposta = `📆 Cancelamentos de ontem: ${formatarMoeda(total)}`;
       }
-    });
 
-    document.getElementById("totalCancelado").innerHTML = `<strong>${formatarMoeda(totalGeral)}</strong>`;
-    document.getElementById("resumoDados").innerText = `Dados analisados: ${registrosContados} registros`;
-
-    const canvas = document.getElementById("graficoCancelamentos");
-
-    if (empresaFiltro && grupos[empresaFiltro] && grupos[empresaFiltro].length > 0) {
-      canvas.style.display = "block";
-      setTimeout(() => {
-        desenharGrafico(grupos[empresaFiltro]);
-      }, 50);
-    } else {
-      canvas.style.display = "none";
-      if (chartCancelamentos) {
-        chartCancelamentos.destroy();
-        chartCancelamentos = null;
-      }
-    }
+      divResp.textContent = resposta;
+      input.value = "";
+      chat.scrollTop = chat.scrollHeight;
+    }, 600);
   }
-
-  function desenharGrafico(lista) {
-    const dadosPorData = {};
-    lista.forEach(c => {
-      if (!dadosPorData[c.data]) dadosPorData[c.data] = 0;
-      dadosPorData[c.data] += c.valor;
-    });
-
-    const labels = Object.keys(dadosPorData).sort();
-    const valores = labels.map(d => dadosPorData[d]);
-
-    const ctx = document.getElementById("graficoCancelamentos").getContext("2d");
-    if (chartCancelamentos) chartCancelamentos.destroy();
-
-    chartCancelamentos = new Chart(ctx, {
-      type: 'line',
-      data: {
-        labels: labels.map(formatarDataBR),
-        datasets: [{
-          label: 'Cancelamentos por Dia',
-          data: valores,
-          borderColor: '#e74c3c',
-          backgroundColor: 'rgba(231, 76, 60, 0.1)',
-          tension: 0.3,
-          fill: true
-        }]
-      },
-      options: {
-        responsive: true,
-        plugins: {
-          legend: { display: false },
-          title: { display: true, text: '📈 Evolução dos Cancelamentos' }
-        },
-        scales: {
-          y: { beginAtZero: true }
-        }
-      }
-    });
-  }
-
-  function enviarWhatsapp() {
-    const empresaFiltro = document.getElementById('filtroEmpresa').value;
-    const busca = document.getElementById('filtroBusca').value.toLowerCase();
-    const dataInicio = document.getElementById('dataInicio').value;
-    const dataFim = document.getElementById('dataFim').value;
-
-    const cancelamentosFiltrados = cancelamentos.filter(c => {
-      return (!empresaFiltro || c.empresa === empresaFiltro) &&
-             (!busca || c.item.toLowerCase().includes(busca)) &&
-             (!dataInicio || c.data >= dataInicio) &&
-             (!dataFim || c.data <= dataFim);
-    });
-
-    if (cancelamentosFiltrados.length === 0) {
-      alert("Nenhum cancelamento encontrado com os filtros atuais.");
-      return;
-    }
-
-    let mensagem = `📢 *Resumo de Cancelamentos por Empresa*%0A`;
-    const agrupado = {};
-
-    cancelamentosFiltrados.forEach(c => {
-      if (!agrupado[c.empresa]) agrupado[c.empresa] = [];
-      agrupado[c.empresa].push(c);
-    });
-
-    Object.entries(agrupado).forEach(([empresa, itens]) => {
-      let subtotal = 0;
-      mensagem += `\n\n🏢 *${empresa}*`;
-      itens.forEach(c => {
-        subtotal += c.valor;
-        mensagem += `\n${c.item} - 💸 ${formatarMoeda(c.valor)} - ${formatarDataBR(c.data)}`;
-      });
-      mensagem += `\nSubtotal: *${formatarMoeda(subtotal)}*`;
-    });
-
-    const telefone = "5577999761436";
-    const url = `https://wa.me/${telefone}?text=${encodeURIComponent(mensagem)}`;
-    window.open(url, "_blank");
-  }
-
-  document.getElementById('filtroEmpresa').addEventListener('change', aplicarFiltros);
-  document.getElementById('dataInicio').addEventListener('change', aplicarFiltros);
-  document.getElementById('dataFim').addEventListener('change', aplicarFiltros);
-  document.getElementById('filtroBusca').addEventListener('input', aplicarFiltros);
-
-  window.onload = () => {
-    preencherDataPadrao();
-    carregarDados();
-  };
 </script>
 
 </body>
