--- a/index.reservas.html
+++ b/index.reservas.html
@@ -9,82 +9,68 @@
     :root{
       --bg:#eef3f8; --card:#fff; --text:#1f2937; --muted:#6b7280; --line:#e5e7eb;
       --brand:#2563eb; --brand-2:#1e40af; --ok:#16a34a; --warn:#b45309; --danger:#ef4444;
-      --accent:#b75507; --radius:14px;
+      --radius:14px;
     }
     @media (prefers-color-scheme: dark){
       :root{ --bg:#0f1115; --card:#12161c; --text:#e5e7eb; --muted:#9ca3af; --line:#1f2937; }
     }
     *{box-sizing:border-box}
-    html,body{height:100%}
-    body{margin:0; font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif; background:var(--bg); color:var(--text);}
-    .wrap{max-width:1180px; margin:auto; padding:24px}
-    header{display:flex; align-items:center; justify-content:space-between; gap:12px; margin-bottom:18px}
-    .title{font-size:clamp(1.1rem,2.2vw,1.6rem); font-weight:800; letter-spacing:.2px; display:flex; align-items:center; gap:10px}
+    html,body{height:100%; margin:0; font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif; background:var(--bg); color:var(--text)}
+
+    .wrap{max-width:960px; margin:auto; padding:16px}
+    header{display:flex; align-items:center; justify-content:space-between; flex-wrap:wrap; gap:12px; margin-bottom:18px}
+    .title{font-size:1.4rem; font-weight:800; letter-spacing:.2px; display:flex; align-items:center; gap:10px}
     .badge{font-size:.8rem; background:linear-gradient(90deg,var(--brand),var(--brand-2)); color:#fff; padding:6px 10px; border-radius:999px}
 
-    .card{background:var(--card); border:1px solid var(--line); border-radius:var(--radius); box-shadow:0 5px 20px rgba(0,0,0,.06)}
+    .card{background:var(--card); border:1px solid var(--line); border-radius:var(--radius); box-shadow:0 5px 15px rgba(0,0,0,.08)}
 
     /* Calendário */
     .cal{padding:14px}
-    .cal-head{display:flex; align-items:center; justify-content:space-between; margin-bottom:10px; position:sticky; top:0; background:var(--card); z-index:5; padding:8px 6px; border-bottom:1px solid var(--line)}
-    .toolbar{display:flex; gap:10px; flex-wrap:wrap}
-    .btn{border:1px dashed var(--line); background:#0000; color:inherit; padding:12px 14px; border-radius:14px; cursor:pointer; font-weight:700; touch-action:manipulation}
+    .cal-head{display:flex; align-items:center; justify-content:space-between; margin-bottom:10px; flex-wrap:wrap; gap:10px}
+    .toolbar{display:flex; gap:6px; flex-wrap:wrap}
+    .btn{border:1px solid var(--line); background:#0000; color:inherit; padding:8px 12px; border-radius:10px; cursor:pointer; font-weight:600; font-size:.9rem}
+    .btn:active{transform:scale(.97); background:var(--line)}
     .btn:disabled{opacity:.6; cursor:not-allowed}
-    .cal-title{font-weight:800}
+    .cal-title{font-weight:800; font-size:1rem}
     .cal-grid{display:grid; grid-template-columns:repeat(7,1fr); gap:6px}
     .cal-dow{font-size:.8rem; color:var(--muted); text-align:center; padding:4px 0}
-    .cal-day{background:transparent; border:1px solid var(--line); border-radius:10px; padding:8px; min-height:92px; position:relative; cursor:pointer; transition:.15s}
-    .cal-day:hover{box-shadow:0 6px 20px rgba(0,0,0,.06)}
+    .cal-day{background:transparent; border:1px solid var(--line); border-radius:10px; padding:6px; min-height:72px; position:relative; cursor:pointer; font-size:.85rem}
     .cal-day.out{opacity:.45}
-    .cal-day .num{font-weight:700; font-size:.95rem}
-    .cal-day .tags{position:absolute; bottom:8px; left:8px; right:8px; display:flex; gap:6px; flex-wrap:wrap}
-    .tag{font-size:.72rem; padding:2px 6px; border-radius:999px; border:1px solid var(--line)}
+    .cal-day .num{font-weight:700; font-size:.9rem}
+    .cal-day .tags{position:absolute; bottom:6px; left:6px; right:6px; display:flex; gap:4px; flex-wrap:wrap}
+    .tag{font-size:.7rem; padding:2px 6px; border-radius:999px; border:1px solid var(--line)}
     .t-pend{background:#fef3c7; border-color:#fde68a}
     .t-conf{background:#dbeafe; border-color:#bfdbfe}
     .t-done{background:#dcfce7; border-color:#bbf7d0}
 
     /* Resumo */
     .summary{padding:14px; border-top:1px solid var(--line)}
-    .summary-grid{display:grid; grid-template-columns:repeat(3,1fr); gap:10px}
-    @media (max-width:720px){ .summary-grid{grid-template-columns:1fr} }
-    .kpi{border:1px solid var(--line); border-radius:12px; padding:12px}
+    .summary-grid{display:grid; grid-template-columns:repeat(auto-fit,minmax(150px,1fr)); gap:10px}
+    .kpi{border:1px solid var(--line); border-radius:12px; padding:12px; text-align:center}
     .kpi .label{font-size:.85rem; color:var(--muted)}
-    .kpi .value{font-size:1.3rem; font-weight:900}
-    .sum-note{font-size:.8rem; color:var(--muted); margin-top:6px}
+    .kpi .value{font-size:1.2rem; font-weight:900; margin-top:4px}
+    .sum-note{font-size:.75rem; color:var(--muted); margin-top:6px; text-align:center}
 
-    /* Modal base (somente leitura) */
+    /* Modal */
     .modal{position:fixed; inset:0; background:rgba(0,0,0,.45); display:none; align-items:flex-end; z-index:60}
     .modal.show{display:flex}
     .sheet{background:var(--card); width:100%; max-height:82vh; border-radius:18px 18px 0 0; box-shadow:0 -10px 30px rgba(0,0,0,.25); overflow:auto}
     .sheet h3{margin:14px 16px}
     .sheet .list{padding:0 16px 16px}
-    .res-item{border:1px solid var(--line); border-radius:12px; padding:10px; margin-bottom:10px}
+    .res-item{border:1px solid var(--line); border-radius:12px; padding:10px; margin-bottom:10px; font-size:.9rem}
     .res-item .top{display:flex; justify-content:space-between; gap:8px; flex-wrap:wrap}
     .res-item .name{font-weight:800}
-    .res-item .meta{font-size:.86rem; color:var(--muted)}
+    .res-item .meta{font-size:.82rem; color:var(--muted)}
 
-    .toast{position:fixed; inset:auto 16px 16px auto; background:#111827; color:#fff; padding:12px 14px; border-radius:12px; box-shadow:0 10px 30px rgba(0,0,0,.3); display:none; z-index:50}
-
-    /* Mobile refinements */
-    @media (max-width:720px){
-      .wrap{padding:12px}
-      .cal{padding:10px}
-      .cal-day{min-height:110px; padding:10px; border-radius:14px}
-      .cal-day .num{font-size:1.05rem}
-      .tag{font-size:.78rem}
-      .kpi{padding:14px}
-      .kpi .value{font-size:1.35rem}
-      .sheet{max-height:90vh}
-      .res-item{padding:12px}
-      .res-item .name{font-size:1.02rem}
-    }
+    .toast{position:fixed; inset:auto 16px 16px auto; background:#111827; color:#fff; padding:10px 12px; border-radius:12px; box-shadow:0 8px 20px rgba(0,0,0,.25); display:none; z-index:50; font-size:.85rem}
+    .toast.show{display:block}
   </style>
 </head>
 <body>
   <div class="wrap">
     <header>
       <div class="title">Reservas - Mercatto Delícia</div>
-      <div class="badge">Calendário & Valores (somente leitura)</div>
+      <div class="badge">Calendário & Valores</div>
     </header>
 
     <div class="card">
@@ -101,34 +87,26 @@
         <div class="cal-grid" id="calGrid"></div>
       </div>
       <div class="summary">
-        <h3 style="margin:0 0 6px 0; color:var(--muted)">Resumo do mês</h3>
+        <h3 style="margin:0 0 6px 0; color:var(--muted); text-align:center">Resumo do mês</h3>
         <div class="summary-grid">
           <div class="kpi">
             <div class="label">Antecipado (mês)</div>
             <div class="value" id="kpiAntecipado">R$ 0,00</div>
           </div>
           <div class="kpi">
-            <div class="label">Final pago (mês)</div>
-            <div class="value" id="kpiFinalPago">R$ 0,00</div>
+            <div class="label">Pagamento (mês)</div>
+            <div class="value" id="kpiPagamento">R$ 0,00</div>
           </div>
           <div class="kpi">
             <div class="label">A receber (mês)</div>
             <div class="value" id="kpiAReceber">R$ 0,00</div>
-            <div class="sum-note">* "A receber" não entra na soma do mês. A soma mensal considera apenas adiantamento + final pago.</div>
           </div>
         </div>
-        <div class="kpi" style="display:flex; align-items:center; justify-content:space-between; margin-top:12px">
-          <div>
-            <div class="label">Pagamento (total do mês)</div>
-            <div class="value" id="kpiTotalMes">R$ 0,00</div>
-          </div>
-          <button id="refreshBtn" class="btn" style="width:auto">Atualizar</button>
-        </div>
+        <div class="sum-note">Pagamento = Antecipado + Final pago</div>
       </div>
     </div>
   </div>
 
-  <!-- Modal do dia (somente leitura) -->
   <div class="modal" id="dayModal" aria-hidden="true">
     <div class="sheet">
       <h3 id="modalTitle">Reservas do dia</h3>
@@ -139,21 +117,15 @@
   <div id="toast" class="toast"></div>
 
   <script>
-    // ===== Config =====
     const endpoint = "https://script.google.com/macros/s/AKfycbxWbA4zKPe771UKHhq5N5Hq3LuLECoYa-a4S6dcb4wJvK03A8NDmnRZGOmoJ50rlNVP/exec";
-
-    // ===== Helpers =====
     const $ = (s,el=document)=>el.querySelector(s);
-    const $$ = (s,el=document)=>Array.from(el.querySelectorAll(s));
     const toast = (msg, ms=3500) => { const el = $("#toast"); el.textContent = msg; el.classList.add("show"); setTimeout(()=>el.classList.remove("show"), ms); };
     const formatBRL = (num) => Number(num||0).toLocaleString('pt-BR',{style:'currency',currency:'BRL'});
     const parseBRL = v => { if(!v) return 0; const s=v.toString().replace(/[^\d,.-]/g,'').replace(/\./g,'').replace(',', '.'); const n=Number(s); return isNaN(n)?0:n; };
     const ymd = d=>{ const z=n=>String(n).padStart(2,'0'); return `${d.getFullYear()}-${z(d.getMonth()+1)}-${z(d.getDate())}`; };
 
-    // ===== Estado =====
     const state = { mes:(new Date()).getMonth(), ano:(new Date()).getFullYear(), reservas:[] };
 
-    // ===== API (somente leitura) =====
     const api = {
       async listar(ano, mes){
         const url = `${endpoint}?acao=listar&ano=${ano}&mes=${mes+1}`;
@@ -165,7 +137,6 @@
       }
     };
 
-    // ===== Calendário =====
     const monthNames = ['Janeiro','Fevereiro','Março','Abril','Maio','Junho','Julho','Agosto','Setembro','Outubro','Novembro','Dezembro'];
     const dow = ['Dom','Seg','Ter','Qua','Qui','Sex','Sáb'];
     const calTitle = $('#calTitle'), calDow = $('#calDow'), calGrid = $('#calGrid');
@@ -190,48 +161,53 @@
         const pend = items.filter(r=> (r.status||'Pendente')!=='Concluída').length;
         const done = items.filter(r=> r.status==='Concluída').length;
         cell.innerHTML = `<div class="num">${d.getDate()}</div>
-          <div class="tags">${items.length? `<span class="tag t-conf">${items.length} reserva(s)</span>`:''}
-            ${pend? `<span class="tag t-pend">Pend: ${pend}</span>`:''}
-            ${done? `<span class="tag t-done">Conc: ${done}</span>`:''}
+          <div class="tags">${items.length? `<span class=\"tag t-conf\">${items.length} reserva(s)</span>`:''}
+            ${pend? `<span class=\"tag t-pend\">Pend: ${pend}</span>`:''}
+            ${done? `<span class=\"tag t-done\">Conc: ${done}</span>`:''}
           </div>`;
         cell.addEventListener('click', ()=> openDayModal(d, items));
         calGrid.appendChild(cell);
       }
     }
 
-    // ===== Resumo mensal (somente leitura) =====
     function sumExtrasFromRecord(r){
-      const keys = Object.keys(r||{}).filter(k=>k.toLowerCase().startsWith('pagamentoextra'));
+      const keys = Object.keys(r||{});
+      return keys.reduce((acc,k)=>{
+        const kl = k.toLowerCase();
+        // Some sheets send extras as "Pagamento 1", "Pagamento extra 2", etc.
+        const isPagamentoField = /pagamento/.test(kl) && !['pagamentoantecipado','valorfinalpago','valorestimado'].includes(kl);
+        if(isPagamentoField){
+          return acc + parseBRL(r[k]);
+        }
+        return acc;
+      }, 0);
+    }).filter(k=>k.toLowerCase().startsWith('pagamentoextra'));
       return keys.reduce((acc,k)=> acc + parseBRL(r[k]), 0);
     }
+
     function updateSummary(){
       const {mes, ano} = state;
       const inMonth = state.reservas.filter(r=>{ const d=new Date(r.datahora); return d.getMonth()===mes && d.getFullYear()===ano; });
       const sum = (arr,fn)=> arr.reduce((a,b)=>a+fn(b),0);
-      const adiantado = sum(inMonth, r=> parseBRL(r.pagamentoAntecipado||0) + sumExtrasFromRecord(r));
+      const antecipado = sum(inMonth, r=> parseBRL(r.pagamentoAntecipado||0) + sumExtrasFromRecord(r));
       const finalPago = sum(inMonth, r=> parseBRL(r.valorFinalPago||0));
+      const pagamento = antecipado + finalPago;
       const aReceber = sum(inMonth.filter(r=> (r.status||'Pendente')!=='Concluída'), r=> {
         const estimado = parseBRL(r.valorEstimado||0);
         const ant = parseBRL(r.pagamentoAntecipado||0) + sumExtrasFromRecord(r);
         return Math.max(estimado - ant, 0);
       });
-      const pagamentoTotal = adiantado + finalPago;
-
-      $('#kpiAntecipado').textContent = formatBRL(adiantado);
-      $('#kpiFinalPago').textContent = formatBRL(finalPago);
+      $('#kpiAntecipado').textContent = formatBRL(antecipado);
+      $('#kpiPagamento').textContent = formatBRL(pagamento);
       $('#kpiAReceber').textContent = formatBRL(aReceber);
-      $('#kpiTotalMes').textContent = formatBRL(pagamentoTotal);
     }
 
-    // ===== Modal do dia (somente leitura) =====
     const dayModal = $('#dayModal');
     function openDayModal(date, items){
       $('#modalTitle').textContent = `Reservas de ${date.toLocaleDateString('pt-BR')}`;
       const list = $('#modalList');
       if(!items || !items.length){ list.innerHTML = '<div class="meta" style="padding:0 0 14px 0">Nenhuma reserva neste dia.</div>'; }
-      else{
-        list.innerHTML = items.map(r=> renderResItem(r)).join('');
-      }
+      else{ list.innerHTML = items.map(r=> renderResItem(r)).join(''); }
       dayModal.classList.add('show');
     }
     dayModal.addEventListener('click', (e)=>{ if(e.target===dayModal) dayModal.classList.remove('show'); });
@@ -239,41 +215,9 @@
     function renderResItem(r){
       const hora = new Date(r.datahora).toLocaleTimeString('pt-BR',{hour:'2-digit',minute:'2-digit'});
       const status = r.status||'Pendente';
-
-      // anexos
-      const anexoKeys = Object.keys(r).filter(k => k.toLowerCase().includes("anexo") && r[k]);
-      const anexos = anexoKeys.map((k,i) => `<a href="${r[k]}" target="_blank">📎 Anexo ${i+1}</a>`).join("<br>");
-
-      // pagamentos adicionais (qualquer campo que contenha "pagamento" e não seja os 3 principais)
-      const pagamentoKeys = Object.keys(r).filter(k=> /pagamento/i.test(k) && !['pagamentoAntecipado','valorFinalPago','valorEstimado'].includes(k));
-      const pagamentos = pagamentoKeys.map((k,i)=> `💵 Pagamento ${i+1}: ${formatBRL(parseBRL(r[k]))}`).join('<br>');
-
-      const adiant = parseBRL(r.pagamentoAntecipado||0) + sumExtrasFromRecord(r);
-      const finalp = parseBRL(r.valorFinalPago||0);
-      const total = adiant + finalp;
-
-      return `<div class="res-item" data-id="${r.id}">
-        <div class="top">
-          <div>
-            <div class="name">${r.nome||'—'}</div>
-            <div class="meta">${hora} • ${r.mesa||'—'} • ${r.pessoas||'0'} pessoa(s)</div>
-          </div>
-          <span class="tag" style="align-self:center">${status}</span>
-        </div>
-        <div class="meta"><b>Email:</b> ${r.email||'—'} • <b>Tel:</b> ${r.telefone||'—'}</div>
-        <div class="meta"><b>Cardápio:</b> ${r.cardapio||'—'} • <b>Banco:</b> ${r.banco||'—'}</div>
-        <div class="meta"><b>Obs:</b> ${r.observacoes||'—'}</div>
-
-        <div class="meta">Estimado: ${formatBRL(parseBRL(r.valorEstimado||0))}</div>
-        <div class="meta"><b>Pagamentos (adiantado):</b> ${formatBRL(adiant)}</div>
-        <div class="meta"><b>Pagamento (total):</b> ${formatBRL(total)}</div>
-
-        ${pagamentos? `<div class="meta">${pagamentos}</div>`:""}
-        ${anexos? `<div class="meta">${anexos}</div>`:""}
-      </div>`;
+      return `<div class=\"res-item\" data-id=\"${r.id}\">\n        <div class=\"top\">\n          <div>\n            <div class=\"name\">${r.nome||'—'}</div>\n            <div class=\"meta\">${hora} • ${r.mesa||'—'} • ${r.pessoas||'0'} pessoa(s)</div>\n          </div>\n          <span class=\"tag\">${status}</span>\n        </div>\n        <div class=\"meta\">Estimado: ${formatBRL(parseBRL(r.valorEstimado||0))}</div>\n        <div class=\"meta\">Antecipado: ${formatBRL(parseBRL(r.pagamentoAntecipado||0) + sumExtrasFromRecord(r))}</div>\n        <div class=\"meta\">Final pago: ${formatBRL(parseBRL(r.valorFinalPago||0))}</div>\n        <div class=\"meta\"><b>Total Pagamento:</b> ${formatBRL(parseBRL(r.pagamentoAntecipado||0) + sumExtrasFromRecord(r) + parseBRL(r.valorFinalPago||0))}</div>\n      </div>`;
     }
 
-    // ===== Navegação mês =====
     $('#prevMonth').addEventListener('click', ()=>{ const m = new Date(state.ano,state.mes,1); m.setMonth(m.getMonth()-1); state.mes=m.getMonth(); state.ano=m.getFullYear(); refreshAll(); });
     $('#nextMonth').addEventListener('click', ()=>{ const m = new Date(state.ano,state.mes,1); m.setMonth(m.getMonth()+1); state.mes=m.getMonth(); state.ano=m.getFullYear(); refreshAll(); });
     $('#todayBtn').addEventListener('click', ()=>{ const t=new Date(); state.mes=t.getMonth(); state.ano=t.getFullYear(); refreshAll(); });
@@ -283,29 +227,4 @@
       try{
         const data = await api.listar(ano, mes);
         state.reservas = data.map((r,i)=> ({
-          id: r.id || r.ID || `ROW-${i+1}`,
-          nome: r.nome||r.Nome||'', email:r.email||r.Email||'', telefone:r.telefone||r.Fone||'', pessoas:r.pessoas||r.Pessoas||'',
-          mesa:r.mesa||r.Local||'', cardapio:r.cardapio||r.Cardapio||'', observacoes:r.observacoes||r.Obs||'',
-          datahora: r.datahora || r.DataHora || r.data || r.Data || '',
-          valorEstimado: String(r.valorEstimado ?? r.ValorEstimado ?? '0'),
-          pagamentoAntecipado: String(r.pagamentoAntecipado ?? r.Adiantamento ?? '0'),
-          valorFinalPago: String(r.valorFinalPago ?? r.FinalPago ?? '0'),
-          banco: r.banco || r.Banco || '', status: r.status || r.Status || 'Pendente',
-          ...r
-        }));
-      }catch(e){
-        state.reservas = [];
-        toast('⚠️ Erro ao carregar dados da planilha: ' + e.message);
-      }
-      buildCalendar(); updateSummary();
-    }
-
-    function refreshAll(){ buildCalendar(); updateSummary(); loadMonth(state.ano, state.mes); }
-
-    // ===== Inicialização =====
-    window.addEventListener('DOMContentLoaded', ()=>{
-      refreshAll();
-    });
-  </script>
-</body>
-</html>
+          id: r.id || r
